<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/drw_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_carloan"
            android:icon="@drawable/drw_car_loan"
            android:title="@string/car_loan" />
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/drw_car"
            android:title="@string/car" />
    </group>

    <item android:title=" ">
        <menu>
            <item
                android:id="@+id/nav_Log"
                android:icon="@drawable/login"
                android:title="Log In" />
        </menu>
    </item>

</menu>
